# walking-robot

./: 12VSCode.md  15DirectoriosRaspberry.md  LICENSE  README.md
Bitácora/: #10OnshapeAurdf  10OnshapeAurdf  10OnshapeAurdf.md  11Espacio_de_trabajo.md  12VSCode  12VSCode.md  13RaspberryPi.md  14JupyterNotebookRaspberry.md  15 NotaNaomi_nuevorumbo.md  16Scorbot.md  17EXPORTACION _URDF _SOLID.md  1Jetson_Introducción.md  2Driver_Introducción.md  3JupyterNotebook_Setup.md  5Control_Servo_Jupyter.md  6ControlBazu  6ControlBazu.md  7InstalaciónROSNoetic.md  8BancoPruebasMDF.md  9OnShape  ConexionServoJetson_ROSSetup.md  Pendientes.md  Semana1.md  Semana2.md  Semana3.md  Semana4.md  Semana5.md  Set_ServoID.md  maquina virtual laboratorio.md
CAD/: CuerpoHexapod.stl  Geometria_motor v1.f3d  README.md
CAD SOLIDWORKS/: EnsambleMotor_Solid.SLDASM  EnsamblePata_Solid.SLDASM  Hexapod.SLDASM
CAD SOLIDWORKS/hexapod_description/: CMakeLists.txt  package.xml
CAD SOLIDWORKS/hexapod_description/config/: joint_names_Hexapod_URDF.yaml
CAD SOLIDWORKS/hexapod_description/launch/: display.launch  display.launch.xml
CAD SOLIDWORKS/hexapod_description/meshes/: 1A_link.STL  1C_link.STL  2B_link.STL  3A_link.STL  3B_link.STL  3C_link.STL  4A_link.STL  4B_link.STL  5A_link.STL  5B_link.STL  5C_link.STL  6A_link.STL  6B_link.STL  6C_link.STL  base_link.STL
CAD SOLIDWORKS/hexapod_description/urdf/: Hexapod_URDF.csv  Hexapod_URDF.urdf  hexapod_description.urdf
CAD_NAOMI/: BaseHEX.ipt  Coxa.ipt  EnsambleHexapod.iam  EnsamblePata.iam  UnionCuerpo.ipt  femurAux.ipt  tapaHEX.ipt  tibia.ipt  (+1 more)
(+78 files in other folders)
