<?xml version="1.0"?>
<package format="3">
  <name>Hexapod_URDF</name>
  <version>0.0.1</version>
  <description>Hexapod robot URDF package</description>

  <maintainer email="naomi.hernandez@ingenieria.unam.edu">NaomiHdRom</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz2</exec_depend>

</package>
